# liblouis_python_json

./: .gitignore  MANUAL.md  README.md  app_cli.py  init.py  main.js  pyproject.toml  salorajan.md
.github/workflows/: deploy.yml  pages.yml
public/: index.html  main.js
public/python_liblouis_json/: hyphenator.py  pass_engine.py  translator.py
public/tables_json/: en-ueb-g1.json
python_liblouis_json/: __init__.py  constants.py  parser.py  table.py  utils.py
reference/: check_json_content.py  check_json_content_2.py  compare_implementations.py  comparison_report.txt  comparison_report_f.txt  converter_debug.txt  create_test_data.py  debug_be.py  debug_caps.py  debug_converter.py  debug_id2.py  debug_id204.py  debug_lonely.py  debug_lonely_context.py  debug_quotes.py  debug_regress.py  deployment_summary.txt  exhaustive_verification_data.csv  full_debug.txt  generate_exhaustive_tests.py  generate_more_tests.py  generate_stage1_tables.py  latest_report.txt  liblouis_table_converter.py  manual.md  progress_summary.txt  project1.txt  search_json.py  search_json_be.py  search_json_but.py  search_json_onel.py  search_punc.py  test_cation.py  test_grade1.py  test_match.py  test_quotes.py  test_quotes_py.py  test_regex.py  test_regex_onel.py  update_table.py  (+2 more)
reference/liblouis-3.37.0-win64/include/liblouis/: liblouis.h
reference/liblouis-3.37.0-win64/lib/: liblouis.la
tables_json/: en-ueb-g2.json  es-g1.json  es-g2.json  french.json  hebrew.json  hindi.json  nemeth.json  tamil.json
tests/: sample_text.txt  test_json_cli.py  test_multilingual.py  test_stage1.py
(+2 files in other folders)
